--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600,700);
 
+::-webkit-input-placeholder {
+    color: #111127;
+  }
+  
+  :-ms-input-placeholder {
+    color: #111127;
+  }
+  
+  ::-ms-input-placeholder {
+    color: #111127;
+  }
+  
+  ::placeholder {
+    color: #111127;
+  }
+  
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
 html, body {
     width: 100%;
     overflow-x: hidden;
@@ -19,6 +34,7 @@ html, body {
     }
   }
 
+/*----------The Header Section for desktop screen-----------*/
   header{
     width: 100%;
     margin: auto;
@@ -72,8 +88,6 @@ nav ul li:hover::after{
 nav ul li:hover a{
    color: firebrick;
   }
-
-
 .nav_action{
     justify-content: space-evenly;
 }
@@ -86,19 +100,16 @@ nav ul li:hover a{
 .nav_action i:hover{
     color: firebrick;
 }
-
 .nav_links .fa{
     display: none;
 }
 nav .fa{
     display: none;
 }
-
 .row{
     display: flex;
     justify-content: space-between;
-}
-
+} /*Row for general purpose*/
 
 .welcome-box{
     margin-top: 30px;
@@ -118,13 +129,11 @@ nav .fa{
 .welcome-box h4{
     padding: 0;
 }
-
 .movie-section{
     width: 100%;
     margin: auto;
     padding-top: 30px;
 }
-
 .movie-section-row{
     display: flex;
     justify-content: space-between;
@@ -149,7 +158,6 @@ nav .fa{
     flex-direction: column;
     justify-content: space-between;
     text-align: left;
-   
 }
 .movie-title-box h2{
     font-size: 23px;
@@ -159,11 +167,11 @@ nav .fa{
     font-size: 16px;
     padding-bottom: 5px;
 }
-.special-text p{
+.special-text{
     color: firebrick;
     font-weight: 600;
+    padding: 0;
 }
-
 .special-link a{
     text-decoration: none;
     color: firebrick;
@@ -173,14 +181,9 @@ nav .fa{
 .special-link a:hover{
     text-decoration: underline;
 }
-
 .ri-search-2-line{
     display: none;
 }
-
-  
-
-  
   nav input[type=text] {
     padding: 6px;
     margin-top: 8px;
@@ -193,11 +196,9 @@ nav .fa{
     font-weight: 500;
     color: #686868;
   }
-
 nav .search-container2{
   display: none;
   }
-
   .search-container2 input[type=text] {
     padding: 6px;
     margin-top: 8px;
@@ -215,8 +216,9 @@ nav .search-container{
   background: transparent;
   }
   
-/* Media Queries */
+/*----------------------Media Queries for the header section------------------*/
 
+/*---------------tablet view----------------*/
 @media (max-width: 1024px){
     .movie-img{
         height: 350px;
@@ -234,6 +236,81 @@ nav .search-container{
 
 }
 
+/*-----------------------mobile view----------------*/
+@media(max-width:900px){
+    header{
+        padding: 20px 25px 20px 25px;
+        width: 100%;
+       }
+     .nav_links ul li {
+         display: block;
+     }
+     nav .search-container2{
+         display: block;
+         }
+         .search-container2 input[type=text] {
+             padding: 6px 6px 6px 29px;
+             margin-top: 8px;
+             font-size: 17px;
+             border: none;
+             border-radius: 0px;
+             text-align: left;
+             width: 100%;
+             margin: 0;
+             padding: 14px;
+           }
+     .nav_links {
+         position: fixed;
+         background-color: white;
+         box-shadow: -2px 0 12px hsla(0, 0%, 0%, .2);
+         height: 100vh;
+         width: 200px;
+         top: 0;
+         right: -300px;
+         text-align: left;
+         z-index: 2;
+         transition: 0.5s;
+         padding: 30px;
+     }   
+     nav .fa{
+         display:contents;
+         font-size: 20px;
+     }
+     .search-container{
+         display: none;
+     }
+ 
+     .nav_links .fa{
+         display: contents;
+         font-size: 30px;
+     }
+ 
+     .nav_action i{
+         margin-left: 7px;
+         font-size: 21px;
+         transition: 0.5s;
+     }
+     .movie-img{
+        height: 280px;
+        width: 39%;
+     }
+     .movie-section-row{
+        display: flex;
+        justify-content: space-between;
+    } 
+     .movie-title-box{
+        padding: 0;
+    }
+    .movie-title-box h2{
+        font-size: 17px;
+        padding-bottom: 3px;
+    }
+    .movie-title-box p{
+        font-size: 14px;
+        color: #222121;
+        padding-bottom: 3px;
+    }
+}
 @media (max-width: 768px) {
     header{
        padding: 20px 25px 20px 25px;
@@ -268,8 +345,7 @@ nav .search-container{
         z-index: 2;
         transition: 0.5s;
         padding: 30px;
-    }
-    
+    }   
     nav .fa{
         display:contents;
         font-size: 20px;
@@ -278,86 +354,82 @@ nav .search-container{
         display: none;
     }
 
-.nav_links .fa{
-    display: contents;
-    font-size: 30px;
+    .nav_links .fa{
+        display: contents;
+        font-size: 30px;
+    }
+
+    .nav_action i{
+        margin-left: 7px;
+        font-size: 21px;
+        transition: 0.5s;
+    }
+    .welcome-box{
+        padding: 27px 27px;
+    }
+    .welcome-box h4{
+        font-size: 12.3px;
+    }
+    .welcome-box br{
+        display: none;
+    }
+    .movie-section{
+        padding-top: 10px;
+    }
+    .movie-section-row{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .movie-img{
+        width: 100%;
+        height: 220px;
+    }
+    .movie-img{
+        width: 100%;
+    }
+    .movie-title-box{
+        padding: 0;
+        padding-top: 5px;
+    }
+    .movie-title-box h2{
+        font-size: 19px;
+        padding-bottom: 3px;
+    }
+    .movie-title-box p{
+        font-size: 15px;
+        color: #222121;
+        padding-bottom: 3px;
+    }
+    .movie-title-box br{
+        display: none;
+    }
 }
 
-.nav_action i{
-    margin-left: 7px;
-    font-size: 20px;
-    transition: 0.5s;
-}
-.welcome-box{
-    padding: 27px 27px;
-}
-.welcome-box h4{
-    font-size: 11.9px;
-}
-.welcome-box br{
-    display: none;
-}
-.movie-section{
-    padding-top: 10px;
-}
-.movie-section-row{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.movie-img{
-    width: 100%;
-    height: 170px;
-}
-.movie-img{
-    width: 100%;
-}
-.movie-title-box{
-    padding: 0;
-    padding-top: 5px;
-}
-.movie-title-box h2{
-    font-size: 17px;
-    padding-bottom: 5px;
-}
-.movie-title-box p{
-    font-size: 14px;
-    padding-bottom: 5px;
-}
-.movie-title-box br{
-    display: none;
-}
-}
 
-
+/*------------------LATEST NEW SECTION----------------*/
 .latest-news{
     width: 100%;
     margin: auto;
     padding: 20px 40px 20px 40px;
     position: relative;
 }
-
 .latest-news-section-row{
     display: flex;
     justify-content: space-evenly;
 }
-
-
 .latest-news-container{
     height: 180px;
     width: 250px;
     padding-top: 10px;
-    /* flex-basis: 44%; */
     border-radius: 10px;
     flex-direction: column;
-    justify-content: space-between;
     text-align: left;
  }
  .latest-news-container img{
      height: 100%;
      width: 100%;
      border-radius: 10px;
-     padding-bottom: 10px;
  }
 
  .latest-news-container:hover h2{
@@ -366,13 +438,13 @@ nav .search-container{
  }
  .latest-news-container:hover img{
     opacity: 0.5;
-
  }
  .new-text-box{
+    height:fit-content;
     flex-direction: column;
-    justify-content: space-between;
+    margin: auto;
     text-align: left;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
  }
  .latest-news-container h2{
      font-size: 17px;
@@ -382,13 +454,30 @@ nav .search-container{
      font-size: 13px;
  }
 
+ /*-------------Media query for latest new section----------------*/
+ /*--------------for tablet view-------------*/
 @media (max-width: 1024px){
     .latest-news-container{
         height: 150px;
         width: 200px;
      }
 }
-
+ /*--------------for mobile view-------------*/
+ @media(max-width:900px){
+    .latest-news-container{
+        height: 150px;
+        width: 160px;
+     }
+     .special-text{
+       font-size: 13px;
+    }
+    .latest-news-container h2{
+        font-size: 15px;
+    }
+    .latest-news-container p{
+        font-size: 13px;
+    }
+ }
 @media (max-width: 768px) {
     .latest-news{
        padding: 20px 25px 20px 25px;
@@ -400,32 +489,28 @@ nav .search-container{
         justify-content: space-evenly;
     }
     .latest-news-container{
-        height: 170px;
+        height: 220px;
         width:100%;
         display: flex;
-        padding-top: 10px;
-      
         flex-basis: 2%;
         border-radius: 10px;
         flex-direction: column;
-        justify-content: space-between;
-        text-align: left;
-       
-     }
-     .new-text-box{
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: left;
      }
      .latest-news-container h2{
-        font-size: 17px;
+        font-size: 18px;
         text-decoration: underline;
         cursor: pointer;
-        padding-bottom: 5px;
+        padding-bottom: 2px;
     }
-    } 
+    .latest-news-container p{
+        font-size: 15px;
+        color: #222121;
+        padding: 0;
+    }
+} 
 
 
+ /*--------------Must Read Section-------------*/
     .must-read{
         width: 100%;
         margin: auto;
@@ -442,7 +527,6 @@ nav .search-container{
     .must-read-container{
     height: 190px;
     width: 250px;
-    /* flex-basis: 44%; */
     border-radius: 10px;
     flex-direction: column;
     justify-content: space-between;
@@ -452,7 +536,6 @@ nav .search-container{
      height: 100%;
      width: 100%;
      border-radius: 10px;
-     padding-bottom: 10px;
  }
 
  .must-read-container:hover h2{
@@ -468,7 +551,7 @@ nav .search-container{
      padding-bottom: 5px;
  }
  .must-read-container p{
-     font-size: 13px;
+     font-size: 14px;
  }
  .must-read-big-container {
     justify-content: center;
@@ -505,7 +588,7 @@ nav .search-container{
     border-radius: 15px; 
 }
 
-.must-read-big-container .new-text-box-overlay .special-text p {
+.must-read-big-container .new-text-box-overlay .special-text{
     margin: 0;
     padding: 0;
 }
@@ -526,7 +609,8 @@ nav .search-container{
 }
 
     
-    
+ /*--------------Media Query for must read section-------------*/
+  /*--------------for tablet view-------------*/
 @media (max-width: 1024px){
     .must-read-container{
         height: 150px;
@@ -534,6 +618,19 @@ nav .search-container{
      }
 }
 
+ /*--------------for mobile view-------------*/
+ @media(max-width:900px){
+    .must-read-container{
+        height: 120px;
+        width: 150px;
+     }
+     .must-read-container h2{
+       font-size: 14px;
+    }
+    .must-read-container p{
+        font-size: 13px;
+     }
+ }
 @media (max-width: 768px) {
     .must-read{
        padding: 20px 25px 20px 25px;
@@ -545,49 +642,39 @@ nav .search-container{
         justify-content: space-evenly;
     }
     .must-read-container{
-        height: 170px;
+        height: 220px;
         width:100%;
         display: flex;
-        padding-top: 10px;
         flex-basis: 2%;
-        padding-bottom: 10px;
         border-radius: 10px;
         flex-direction: column;
-        justify-content: space-between;
-        text-align: left;
-       
-     }
-     .new-text-box{
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: left;
+        padding-top: 5px;
      }
      .must-read-container h2{
         font-size: 17px;
         text-decoration: underline;
         cursor: pointer;
-        padding-bottom: 5px;
+    
     }
-
     .must-read-big-container {
-        height: 400px;
+        height: 380px;
     }
-
+    .must-read-big-container .new-text-box-overlay{
+        height: 380px;
+    }
     .must-read-big-container .new-text-box-overlay h2 {
         margin: 10px 0;
         text-decoration: underline;
-        font-size: 18px;
+        font-size: 19px;
     }
-
     .must-read-big-container .new-text-box-overlay p {
         margin: 10px 0;
         font-size: 15px;
         color: #e7e5e5;
-    }
-     
-    } 
+    }  
+} 
 
-
+ /*--------------Editors Pick Section-------------*/
     .editors-pick{
         width: 100%;
         margin: auto;
@@ -602,9 +689,7 @@ nav .search-container{
         border-radius: 10px;
         position: relative;
         overflow: hidden;
-        
     }
-    
     .editors-pick-container img {
         object-fit: cover;
         display: block;
@@ -613,7 +698,6 @@ nav .search-container{
         border-radius: 10px;
         transition: width 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
     }
-    
     .editors-pick-container .editor-text-box-overlay {
         position: absolute;
         top: 0;
@@ -629,12 +713,6 @@ nav .search-container{
         z-index: 2;
         border-radius: 15px; 
     }
-    
-    .editors-pick-container .editor-text-box-overlay .special-text p {
-        margin: 0;
-        padding: 0;
-    }
-    
     .editors-pick-container .editor-text-box-overlay h2 {
         margin: 10px 0;
     }
@@ -644,43 +722,42 @@ nav .search-container{
     .editors-pick-container:hover img{
       opacity: 0.9;
     }
-    
     .editors-pick-container .editor-text-box-overlay p {
         margin: 10px 0;
         color: #e7e5e5;
     }
+
+     /*--------------Editors Pick Section Media Query for mobile-------------*/
     @media (max-width: 768px) {
         .editors-pick{
            padding: 4px 25px 20px 25px;
            width: 100%;
           }
-   
           .editors-pick-container {
+            padding-top: 10px;
             height: 330px;
         }
         .editors-pick-container .editor-text-box-overlay h2 {
-          font-size: 16px;
+          font-size: 17px;
           text-decoration: underline;
         }
-        
         .editors-pick-container .editor-text-box-overlay p {
-          font-size: 13px;
+          font-size: 14px;
         }
     } 
 
-    .creator{
-        width: 100%;
-        margin: auto;
-        padding: 250px 40px 20px 40px;
-        position: relative;
-    }
-    
-    .creator-section-row{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-    }
-        
+     /*--------------Creator Profile Section-------------*/
+.creator{
+    width: 100%;
+    margin: auto;
+    padding: 250px 40px 20px 40px;
+    position: relative;
+}
+.creator-section-row{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
 .creator_col{
     flex-basis: 18%;
     border-radius: 15px;
@@ -692,27 +769,27 @@ nav .search-container{
     flex-direction: column;
     cursor: pointer;
     display: flex;
-  }
-  .creator_col img{
+}
+.creator_col img{
     height: 60px;
     width: 60px;
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 100%;
-  }
+}
   
-  .creator_col p{
+.creator_col p{
     padding: 0;
     font-weight: 500;
     color: firebrick;
-  }
+}
   
-  .creator_col h3{
+.creator_col h3{
     margin-top: 15px;
     text-align: left;
-  }
+}
 
-  .newsletter{
+.newsletter{
     flex-basis: 37%;
     border-radius: 10px;
     background: #e0dcdc;
@@ -725,7 +802,7 @@ nav .search-container{
     justify-content: space-between;
   }
 
-  .mail {
+.mail {
   padding: 0.5em 0 0.5em 1.5em;
   line-height: 3;
   width: 250px;
@@ -733,17 +810,17 @@ nav .search-container{
   border: 1px solid #d9d9d9;
 }
 
- .newletter-list {
+.newletter-list {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 0.5rem;
-  }
+}
   
- .newletter-list li {
+.newletter-list li {
     list-style-type: none;
     padding-left: 0.2rem;
-  }
+}
   
   .newletter-list p{
     font-size: 0.9rem;
@@ -778,29 +855,35 @@ nav .search-container{
     align-self: center;
     text-align: center;
   }
+
   
-  ::-webkit-input-placeholder {
-    color: #111127;
-  }
-  
-  :-ms-input-placeholder {
-    color: #111127;
-  }
-  
-  ::-ms-input-placeholder {
-    color: #111127;
-  }
-  
-  ::placeholder {
-    color: #111127;
-  }
-  
-  
+   /*--------------MediaQuery for mobile view-------------*/
+ 
+
   @media (max-width: 1024px){
+    .creator{
+        padding-top: 300px;
+        }
     .creator_col{
         flex-basis: 19%;
       }
 }
+@media(max-width:900px){
+    .creator{
+       padding-top: 300px;
+       }
+       .creator_col{
+       width: 125px;
+      }
+      .newsletter{
+        flex-direction: column;
+        padding: 1rem;
+        text-align: center;
+      }
+      .newletter-list h2 {
+        font-size: 15px;
+      }
+ }
 
 @media (max-width: 768px) {
     .creator{
@@ -813,17 +896,24 @@ nav .search-container{
         flex-direction: column;
         justify-content: space-between;
     }
+    .creator_col{
+       width: 100%;
+    }
+    .creator_col img{
+        height: 90px;
+        width: 90px;
+    }
     .newsletter{
         flex-direction: column;
         padding: 1rem;
+        text-align: center;
       }
 
-     h2 {
+      .newletter-list h2 {
         align-self: center;
         text-align: center;
         font-size: 20px;
         margin-bottom: 0.2rem;
-        
       }
       
       .newletter-list {
@@ -838,7 +928,7 @@ nav .search-container{
         padding-left: 0.2rem;
       }
       
-       p{
+      .newletter-list p{
         font-size: 0.7rem;
         margin: 1rem;
         color: #222121;
@@ -851,7 +941,7 @@ nav .search-container{
     .mail {
         padding: 0.5em 0 0.5em 1.5em;
         line-height: 3;
-        width: 190px;
+        width: 210px;
         height: 55px;
         border: 1px solid #d9d9d9;
       }
